// file: proto/gcommon/v2/config/restriction_type.proto
// version: 1.0.1
// guid: 7444b7aa-6693-418e-ae6b-aa854f8c5400

edition = "2023";

package common.v2;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/commonpb/v2";

enum RestrictionType {
  RESTRICTION_TYPE_UNSPECIFIED = 0;
  RESTRICTION_TYPE_IP_ADDRESS = 1;
  RESTRICTION_TYPE_TIME_RANGE = 2;
  RESTRICTION_TYPE_LOCATION = 3;
  RESTRICTION_TYPE_USER_AGENT = 4;
  RESTRICTION_TYPE_CUSTOM = 5;
}
