// file: proto/gcommon/v1/config/access_restriction.proto
// version: 1.0.0
// guid: cfdd7cdc-6bb3-4b8f-b3a9-fa8a84cc84ad

edition = "2023";

package config.v1;

import "common/v1/restriction_type.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/configpb";

message AccessRestriction {
  // Restriction type
  common.v1.RestrictionType type = 1;

  // Restriction value
  string value = 2 [(buf.validate.field).string.min_len = 1];

  // Restriction operator
  string operator = 3 [(buf.validate.field).string.min_len = 1];

  // Restriction reason
  string reason = 4 [(buf.validate.field).string.min_len = 1];
}
