// file: pkg/organization/proto/tenant_quota.proto
// Tenant quota message definition

edition = "2023";

package gcommon.v1.organization;

option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

/**
 * TenantQuota defines resource limits and quotas for a tenant.
 */
message TenantQuota {
  // Tenant ID this quota applies to
  string tenant_id = 1;

  // Maximum number of users
  int32 max_users = 2;

  // Maximum storage in bytes
  int64 max_storage_bytes = 3;

  // Maximum API requests per hour
  int32 max_api_requests_per_hour = 4;

  // Maximum number of projects
  int32 max_projects = 5;

  // Maximum bandwidth in bytes per month
  int64 max_bandwidth_bytes_per_month = 6;

  // Whether the tenant can create sub-tenants
  bool can_create_sub_tenants = 7;

  // Custom quota attributes
  map<string, string> custom_quotas = 8;
}
